# dna_viewer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/dna_insights/: __init__.py  app.py  app_state.py  constants.py
src/dna_insights/core/: __init__.py  clinvar.py  db.py  exceptions.py  importer.py  insight_engine.py  knowledge_base.py  models.py  parser.py  report.py  security.py  settings.py  utils.py
src/dna_insights/knowledge_base/: __init__.py  clinvar_seed.tsv  kb_manifest.json
src/dna_insights/knowledge_base/modules/: adh1b_alcohol_metabolism.json  alcohol_flush.json  bcmo1_beta_carotene.json  caffeine_metabolism.json  cyp2c19_pgx.json  cyp2c9_vkorc1_warfarin.json  dpyd_fluoropyrimidines.json  fads1_omega3.json  fto_trait.json  fut2_b12.json  lactose_persistence.json  mthfr_folate.json  slco1b1_statins.json  tpmt_thiopurines.json  vitamin_d_gc.json
src/dna_insights/tools/: __init__.py  build_clinvar_cache.py
src/dna_insights/ui/: __init__.py  import_wizard.py  insights.py  main_window.py  profile_gate.py  profiles.py  report_export.py  settings.py  theme.py  variant_explorer.py  widgets.py
tests/: test_clinvar.py  test_db.py  test_insights.py  test_parser.py
tests/fixtures/: ancestry_sample.txt  clinvar_sample.vcf  variant_summary_sample.txt
