[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dna-insights"
version = "0.1.0"
description = "Local-first DNA insights app for AncestryDNA raw data"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
  "PySide6>=6.6",
  "pydantic>=2.6",
  "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[project.scripts]
dna-insights = "dna_insights.app:main"
dna-insights-build-clinvar-cache = "dna_insights.tools.build_clinvar_cache:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dna_insights = ["knowledge_base/**/*"]
